# corona-germany-telegram-bot

./: .gitignore  README.md  pytest.ini  setup.cfg  setup.py
config/: config.sample.ini  news.sample.ini
corona_germany_telegram_bot/: __main__.py  bot.py  config.py  log.py  news.py  users.py
tests/unit/: test_config.py  test_log.py  test_utility.py
