# for a list of all values see
# https://setuptools.readthedocs.io/en/latest/setuptools.html

[metadata]
name = corona-germany-telegram-bot
version = 0.0.1
url = https://github.com/jpylypiw/corona-germany-telegram-bot
project_urls =
    Bug Tracker = https://github.com/jpylypiw/corona-germany-telegram-bot/issues
    Documentation = https://github.com/jpylypiw/corona-germany-telegram-bot/blob/master/README.md
    Source Code = https://github.com/jpylypiw/corona-germany-telegram-bot
author = Jochen Pylypiw
author_email = jochen@pylypiw.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Topic :: Internet :: WWW/HTTP :: Dynamic Content :: News/Diary
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
license = GPL-3.0
description = Corona Germany Information Telegram Bot Source Code written in Python 3
long_description = file: README.md
long_description_content_type = text/markdown
keywords = corona,telegram,virus,information,bot,directmessaging

[options]
zip_safe = false
setup_requires =
    setuptools
    pytest-runner
python_requires = >= 3.5
tests_require =
    pytest-cov
    pytest-flake8
    pytest
include_package_data = true
install_requires =
    requests
    python-telegram-bot
    xmltodict
packages = find:

[flake8]
max-line-length = 100
doctests = True
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/
